# GatorYaml

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  test.py
.github/: cspell.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: new-feature.md
.github/workflows/: publish.yml
gatoryaml/: __init__.py  exceptions.py  gator_yaml.py  split_file_path.py
gatoryaml/test_ignored/: old_gatoryaml.py
tests/: test_gator_yaml.py  test_split_file_path.py
